--- a/CA_ML_4.ipynb
+++ b/CA_ML_4.ipynb
@@ -6,7 +6,7 @@
       "name": "CA_ML_4.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNg9YVZJGp21vkHwlklo+eg",
+      "authorship_tag": "ABX9TyMYiHlrcrGXYEmrn7OqM0xW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5524,6 +5524,28 @@
       "cell_type": "markdown",
       "source": [
         "## **4.1 Discussion**\n",
+        "\n",
+        "Looking coldly at the numbers, Random Forest Algorithm got the best result with 81.3% of testing accuracy between the comparison of models. \n",
+        "\n",
+        "Random forest is based on a bagging algorithm and uses ensemble learning techniques. Build as many trees as possible in a subset of our data and combine the outputs of all the trees. In this way, it reduces the problem of overfitting of decision trees, reduces  variance and  improves  accuracy. \n",
+        "It also works well with both categorical and continuous variables and in general does not need standardization and normalization (feature scaling) because it uses rule based approach instead of distance calculation (Kumar, 2019).\n",
+        "\n",
+        "Random forests are usually robust against outliers and can handle them automatically but takes longer time for training compared to Decision trees.\n",
+        "Random forests generate many trees (rather than one tree in the case of decision trees) and make decisions with a majority of votes, so training takes much longer than decision trees (Kumar, 2019). \n",
+        "\n",
+        "But the result of Random Forest can be called as overfitting. \n",
+        "\n",
+        "Overfitting refers to the undesired behavior of  machine learning algorithms used in predictive modeling. You can determine if a machine learning model is overfitting by first evaluating the model in the training dataset and then in the  holdout test dataset.  If the performance of the \n",
+        " model is significantly better on the training dataset  than  on the test dataset, it is possible that the model is overfitting the training dataset (Brownlee, 2020).\n",
+        "\n",
+        " This is exactly what happened with the ***Random Forest (Training 97% / Testing 81.3%), KNN (Training 100% / Testing 74.4%)  and ANN (Training 83% / Testing 58.1%)*** models.\n",
+        "\n",
+        " Reasons for overfitting are (Biswal,2021): \n",
+        "\n",
+        "1. The data used for training is not sanitized and contains noise (garbage value). \n",
+        "2. Large model  variance. \n",
+        "3. The  training dataset used is not large enough \n",
+        "4. Model is too complicated\n",
         "\n"
       ],
       "metadata": {
@@ -5546,7 +5568,13 @@
         "\n",
         "Brownlee, J., 2018. How to Remove Outliers for Machine Learning. [online] Machine Learning Mastery. Available at: https://machinelearningmastery.com/how-to-use-statistics-to-identify-outliers-in-data/ [Accessed 08 April 2022].\n",
         "\n",
-        "Brownlee, J., 2022. What is a Confusion Matrix in Machine Learning. [online] Machine Learning Mastery. Available at: <https://machinelearningmastery.com/confusion-matrix-machine-learning/#:~:text=A%20confusion%20matrix%20is%20a%20summary%20of%20prediction%20results%20on,key%20to%20the%20confusion%20matrix.> [Accessed 8 April 2022]."
+        "Brownlee, J., 2022. What is a Confusion Matrix in Machine Learning. [online] Machine Learning Mastery. Available at: <https://machinelearningmastery.com/confusion-matrix-machine-learning/#:~:text=A%20confusion%20matrix%20is%20a%20summary%20of%20prediction%20results%20on,key%20to%20the%20confusion%20matrix.> [Accessed 8 April 2022].\n",
+        "\n",
+        "Kumar, N., 2019. Advantages and Disadvantages of Random Forest Algorithm in Machine Learning. [online] Theprofessionalspoint.blogspot.com. Available at: <http://theprofessionalspoint.blogspot.com/2019/02/advantages-and-disadvantages-of-random.html#:~:text=Random%20Forest%20is%20based%20on,and%20therefore%20improves%20the%20accuracy.> [Accessed 8 April 2022].\n",
+        "\n",
+        "Brownlee, J., 2020. How to Identify Overfitting Machine Learning Models in Scikit-Learn. [online] Machine Learning Mastery. Available at: <https://machinelearningmastery.com/overfitting-machine-learning-models/> [Accessed 8 April 2022].\n",
+        "\n",
+        "Biswal, A., 2021. The Complete Guide on Overfitting and Underfitting in Machine Learning. [online] Simple Learn. Available at: <https://www.simplilearn.com/tutorials/machine-learning-tutorial/overfitting-and-underfitting> [Accessed 8 April 2022]."
       ],
       "metadata": {
         "id": "ES5QfljYbsn9"
