--- a/CA_ML_4.ipynb
+++ b/CA_ML_4.ipynb
@@ -6,7 +6,7 @@
       "name": "CA_ML_4.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMYiHlrcrGXYEmrn7OqM0xW",
+      "authorship_tag": "ABX9TyOXv1hlBMqeunaaS0nIwjoH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5538,14 +5538,20 @@
         "Overfitting refers to the undesired behavior of  machine learning algorithms used in predictive modeling. You can determine if a machine learning model is overfitting by first evaluating the model in the training dataset and then in the  holdout test dataset.  If the performance of the \n",
         " model is significantly better on the training dataset  than  on the test dataset, it is possible that the model is overfitting the training dataset (Brownlee, 2020).\n",
         "\n",
-        " This is exactly what happened with the ***Random Forest (Training 97% / Testing 81.3%), KNN (Training 100% / Testing 74.4%)  and ANN (Training 83% / Testing 58.1%)*** models.\n",
+        "This is exactly what happened with the ***Random Forest (Training 97% / Testing 81.3%), KNN (Training 100% / Testing 74.4%)  and ANN (Training 83% / Testing 58.1%)*** models.\n",
         "\n",
-        " Reasons for overfitting are (Biswal,2021): \n",
+        " Reasons for overfitting are (Biswal, 2021): \n",
         "\n",
         "1. The data used for training is not sanitized and contains noise (garbage value). \n",
         "2. Large model  variance. \n",
         "3. The  training dataset used is not large enough \n",
         "4. Model is too complicated\n",
+        "\n",
+        "\n",
+        "But since **Random Forest , KNN and ANN** models are overfitting, it suggests that the model might not perform well on unknown data. So, I shall choose the next best model that does not Overfit, and that is **SVM linear ( Training 75.4% / Testing 72%)**. \n",
+        "\n",
+        "\n",
+        "SVM is not good to work with large datasets, what is not the case. SVM works well when there is a clear margin of separation between classes, is more effective in high dimensional spaces and is effective where the number os dimensions is greater than the number of samples (K, D., 2019).\n",
         "\n"
       ],
       "metadata": {
@@ -5555,7 +5561,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **5. Conclusion**"
+        "# **5. Conclusion**\n",
+        "\n",
+        "\n",
+        "SVM was the natural choice after looking at the results more closely. The results could have been better using Cross-validation and better feature scaling. Because the dataset have high standard deviations ( Fe, Ba, K columns) compared to their mean. This negatively affected the performance of the models."
       ],
       "metadata": {
         "id": "PUVLTyeQuwjg"
@@ -5574,7 +5583,9 @@
         "\n",
         "Brownlee, J., 2020. How to Identify Overfitting Machine Learning Models in Scikit-Learn. [online] Machine Learning Mastery. Available at: <https://machinelearningmastery.com/overfitting-machine-learning-models/> [Accessed 8 April 2022].\n",
         "\n",
-        "Biswal, A., 2021. The Complete Guide on Overfitting and Underfitting in Machine Learning. [online] Simple Learn. Available at: <https://www.simplilearn.com/tutorials/machine-learning-tutorial/overfitting-and-underfitting> [Accessed 8 April 2022]."
+        "Biswal, A., 2021. The Complete Guide on Overfitting and Underfitting in Machine Learning. [online] Simple Learn. Available at: <https://www.simplilearn.com/tutorials/machine-learning-tutorial/overfitting-and-underfitting> [Accessed 8 April 2022].\n",
+        "\n",
+        "K, D., 2019. Top 4 advantages and disadvantages of Support Vector Machine or SVM. [online] Medium. Available at: <https://dhirajkumarblog.medium.com/top-4-advantages-and-disadvantages-of-support-vector-machine-or-svm-a3c06a2b107> [Accessed 8 April 2022]."
       ],
       "metadata": {
         "id": "ES5QfljYbsn9"
