--- a/CA_ML_4.ipynb
+++ b/CA_ML_4.ipynb
@@ -6,7 +6,7 @@
       "name": "CA_ML_4.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOXv1hlBMqeunaaS0nIwjoH",
+      "authorship_tag": "ABX9TyMjjQkwb1I5jsADadADWS7F",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5573,7 +5573,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "References\n",
+        "# **6. References**\n",
         "\n",
         "Brownlee, J., 2018. How to Remove Outliers for Machine Learning. [online] Machine Learning Mastery. Available at: https://machinelearningmastery.com/how-to-use-statistics-to-identify-outliers-in-data/ [Accessed 08 April 2022].\n",
         "\n",
